<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/startButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:backgroundTint="@color/Blue"
        android:fontFamily="@font/exo_2_bold"
        android:onClick="StartTesting"
        android:text="@string/Main_button"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/ThemeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="120dp"
        android:fontFamily="@font/exo_2_bold"
        android:text="@string/Theme"
        android:textSize="48sp"
        app:layout_constraintBottom_toTopOf="@+id/Namefield"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/EnterNameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/exo_2_bold"
        android:text="@string/Enter_name"
        app:layout_constraintBottom_toTopOf="@+id/Namefield"
        app:layout_constraintStart_toStartOf="@+id/Namefield" />

    <TextView
        android:id="@+id/EnterSurnameText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:fontFamily="@font/exo_2_bold"
        android:text="@string/Enter_surname"
        app:layout_constraintBottom_toTopOf="@+id/surnameField"
        app:layout_constraintStart_toStartOf="@+id/surnameField" />

    <EditText
        android:id="@+id/Namefield"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:autofillHints="@string/Name"
        android:ems="10"
        android:fontFamily="@font/exo_2_bold"
        android:hint="@string/Name"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/EnterSurnameText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/surnameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="150dp"
        android:autofillHints="@string/Surname"
        android:ems="10"
        android:fontFamily="@font/exo_2_bold"
        android:hint="@string/Surname"
        android:inputType="text"
        android:minHeight="48dp"
        app:layout_constraintBottom_toTopOf="@+id/startButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>